--- a/src/scss/config/_variables.scss
+++ b/src/scss/config/_variables.scss
@@ -2,9 +2,8 @@
 	SVG ARTWORK COLORS
 *------------------------------------*/
 
-$grapefruit: #FF5C5C;
 $black: #000000;
-$ghost-white: #F9F7FE;
+$white: #FFFFFF;
 $navy-purple: #9351E5;
 $dark-mint-green: #27C97B;
 $neon-fuchsia: #FC4561;
