--- a/src/scss/stylesheet.scss
+++ b/src/scss/stylesheet.scss
@@ -5,6 +5,21 @@
 @import "helpers/mixins";
 @import "helpers/ratio-blocks";
 
+.layout-block {
+  background-color: rgba(164, 164, 164, 0.38);
+  padding: 0.5rem;
+  border: 1px dashed #969696;
+}
+
+.layout-block--nopadding {
+  padding: 0;
+}
+
+.grid-block {
+  background-color: #FFF;
+  padding: 0.5rem;
+}
+
 @tailwind components;
 @tailwind utilities;
 
