Refactor | Adding names to HTML elements in PG

--- a/src/scss/config/_variables.scss
+++ b/src/scss/config/_variables.scss
@@ -3,7 +3,7 @@
 *------------------------------------*/
 
 $black: #000000;
-$white: #FFFFFF;
+$ghost-white: #F9F7FE;
 $navy-purple: #9351E5;
 $dark-mint-green: #27C97B;
 $neon-fuchsia: #FC4561;
