Refactor: Adding sass files to project

--- a/src/scss/config/_variables.scss
+++ b/src/scss/config/_variables.scss
@@ -3,6 +3,7 @@
 *------------------------------------*/
 
 $black: #000000;
+$white: #FFFFFF;
 $ghost-white: #F9F7FE;
 $navy-purple: #9351E5;
 $dark-mint-green: #27C97B;
@@ -11,3 +12,4 @@ $saffron: #F9C431;
 $cerebral-grey: #CCCCCC;
 $basalt-grey: #999999;
 $sky-captain: #232836;
+$panel-grey: #282E3D;
