--- a/src/scss/stylesheet.scss
+++ b/src/scss/stylesheet.scss
@@ -27,3 +27,15 @@
 @import "base/typography";
 
 /* Components */
+@import "components/wrapper";
+@import "components/sidebar";
+@import "components/title-block";
+@import "components/vertical-menu";
+@import "components/dashboard";
+@import "components/grid";
+@import "components/panel";
+@import "components/data-label";
+@import "components/chart-container";
+@import "components/data-group";
+@import "components/data-group--inline";
+@import "components/data-group-media";
