--- a/src/scss/components/_panel.scss
+++ b/src/scss/components/_panel.scss
@@ -1,16 +1,20 @@
 .panel {
-  @apply h-full rounded text-color--white;
+  @apply h-full text-color--white;
 
+  border-radius: 0.5rem;
   color: $white;
   background-color: $panel-grey;
 
   &__heading {
-    @apply text-size--x-large border-black border-solid border-b p-4;
-
+    @apply p-4;
+    border-bottom: 1px solid $border-grey;
+    font-weight: 200;
+    font-size: $text-size__x-large;
+    line-height: $line-height__x-large;
   }
 
   &__grid {
-    @apply flex flex-wrap mb-4 p-2;
+    @apply flex flex-wrap p-2;
 
   }
 
@@ -36,14 +40,58 @@
     }
 
     &--border-left {
-      border-left: 1px solid $white;
+      position: relative;
+
+      &:before{
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 0.25rem;
+        border-left: 1px solid $border-grey;
+        height: calc(100% - 0.5rem);
+
+      }
     }
 
   }
 
   &__divider {
-    @apply text-center my-4 uppercase text-size--tiny;
+    @apply text-center m-4 uppercase px-4 text-size--tiny;
+    width: 100%;
+    text-align: center;
+    position: relative;
 
+    &:before,
+    &:after {
+      content: "";
+      position: absolute;
+      bottom: -1px;
+      line-height: 0;
+      height: 50%;
+      width: 100%;
+      border-top: 1px solid red;
+      z-index: 1;
+    }
+
+    &:after {
+      right: 1rem;
+      text-align: right;
+    }
+
+    &:before {
+      left: 1rem;
+      text-align: left;
+    }
+
+    span {
+      background: $panel-grey;
+      padding: 0 24px;
+      text-align: center;
+      display: inline-block;
+      max-width: 75%;
+      position: relative;
+      z-index: 10;
+    }
   }
 
 }
