--- a/src/scss/components/_title-block.scss
+++ b/src/scss/components/_title-block.scss
@@ -1,13 +1,22 @@
-.title-block{
-	@apply flex items-center text-left px-4;
-	@screen md {
-        @apply flex-col text-center py-4;
+.title-block {
+  @apply text-left;
+  display: flex;
+  align-items: center;
+  padding: 1rem;
+  position: relative;
+  width: 100%;
+
+  @screen lg {
+    display: block;
+    @apply text-center;
+    margin: 3rem 0;
+  }
+  &__logo {
+    @apply rounded-full mr-4 bg-white border border-grey p-1;
+    height: auto;
+    @screen md {
+      @apply mr-0;
     }
-	&__logo {
-	@apply rounded-full mr-4 bg-white border border-grey p-1;
-	@screen md {
-        @apply mr-0;
-    }
-}
+  }
 
 }
