--- a/src/scss/config/_variables.scss
+++ b/src/scss/config/_variables.scss
@@ -14,3 +14,8 @@ $basalt-grey: #999999;
 $sky-captain: #232836;
 $panel-grey: #282E3D;
 $border-grey: #3D4350;
+
+/* Tints
+========================================================================== */
+
+$navy-purple__tint: rgba(147,81,229,0.05);
