--- a/src/scss/components/_chart-container.scss
+++ b/src/scss/components/_chart-container.scss
@@ -1,3 +1,12 @@
 .chart-container{
-	@apply layout-block ratio-block--16x9;
+	padding: 0.5rem;
+
+	&--no-padding {
+		padding: 0;
+	}
+
+	img {
+		width: 100%;
+		height: auto;
+	}
 }
